<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bccck"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView

        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:src="@drawable/logoapple" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/tv_weight"
        android:textColor="@color/white"
        android:textSize="18.5sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/txt_weight"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:background="@color/purple_200"
        android:gravity="center"
        android:hint="@string/weight_hint"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/tv_height"
        android:textColor="@color/white"
        android:textSize="18.5sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_height"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:background="@color/purple_200"
        android:gravity="center"
        android:hint="@string/height_hint"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="12dp"
        android:text="@string/btn_reset"
        android:textAllCaps="false"
        android:textSize="21dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_result"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/btn_resualt"
        android:textAllCaps="false"
        android:textSize="21dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="31dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="31dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="bold" />

</LinearLayout>


